# failure

./: .gitignore  CMakeLists.txt  build.sh  clean.sh
.github/actions/deploy/: action.yml
.github/actions/package/: action.yml
.github/actions/secret/: action.yml
.github/actions/sign/: action.yml  action_not.yml  sign.sh  sign_packages.sh
.github/actions/ubuntu/test/: action.yml
.github/workflows/: build.yml  deploy.yml  macos.yml  package.yml  pipeline.yml  run.yml  sign.yml  test.yml  test_macos.yml  test_ubuntu.yml  ubuntu.yml
src/: doit.cpp  doit.h  main.cpp
